trunk/Archive2/8b/bd4e9cd5661b09/output
main.cpp: In function 'int main()':
main.cpp:2561:5: error: 'as' is not a member of 'metaAdd::find_indices<int, meta::v1::list<int, double, int, double, int, int, int> > {aka meta::v1::list<std::integral_constant<long unsigned int, 0ul>, std::integral_constant<long unsigned int, 2ul>, std::integral_constant<long unsigned int, 4ul>, std::integral_constant<long unsigned int, 5ul>, std::integral_constant<long unsigned int, 6ul> >}'
     metaAdd::find_indices<int,l>::as;
     ^
